deploy: d0885e9fdb2900478c1f799738c215172e1bba7d

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="ciudadrealtechhub.github.io/404.html"><meta property="og:site_name" content="Ciudad Real Tech Hub">
+<meta property="og:url" content="ciudadrealtechhub.github.io/404.html">
 <meta itemprop=name content="404 Page not found">
 <meta itemprop=description content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia."><meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
