--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:title" content="Ciudad Real Tech Hub">
 <meta property="og:description" content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="ciudadrealtechhub.github.io/"><meta property="og:site_name" content="Ciudad Real Tech Hub">
+<meta property="og:url" content="ciudadrealtechhub.github.io/">
 <meta itemprop=name content="Ciudad Real Tech Hub">
 <meta itemprop=description content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia."><meta name=twitter:card content="summary">
 <meta name=twitter:title content="Ciudad Real Tech Hub">
