deploy: 5e9f62c53b3c27e670e613ad3500d6964d4e3ff4

--- a/index.html
+++ b/index.html
@@ -7,35 +7,35 @@
 <meta name=description content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia.">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=/ciudadrealtechhub.github.io/ananke/css/main.min.css>
-<link href=ciudadrealtechhub.github.io/index.xml rel=alternate type=application/rss+xml title="Ciudad Real Tech Hub">
-<link href=ciudadrealtechhub.github.io/index.xml rel=feed type=application/rss+xml title="Ciudad Real Tech Hub">
+<link rel=stylesheet href=/ananke/css/main.min.css>
+<link href=/index.xml rel=alternate type=application/rss+xml title="Ciudad Real Tech Hub">
+<link href=/index.xml rel=feed type=application/rss+xml title="Ciudad Real Tech Hub">
 <meta property="og:title" content="Ciudad Real Tech Hub">
 <meta property="og:description" content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="ciudadrealtechhub.github.io/">
+<meta property="og:url" content="/">
 <meta itemprop=name content="Ciudad Real Tech Hub">
 <meta itemprop=description content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia."><meta name=twitter:card content="summary">
 <meta name=twitter:title content="Ciudad Real Tech Hub">
 <meta name=twitter:description content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia.">
 </head>
 <body class="ma0 avenir bg-near-white">
-<header class="cover bg-top" style=background-image:url(ciudadrealtechhub.github.io/images/crth.jpg)>
+<header class="cover bg-top" style=background-image:url(images/crth.jpg)>
 <div class=bg-black-60>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
-<a href=ciudadrealtechhub.github.io/ class="f3 fw2 hover-white no-underline white-90 dib">
+<a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
 Ciudad Real Tech Hub
 </a>
 <div class="flex-l items-center">
 <ul class="pl0 mr3">
 <li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=ciudadrealtechhub.github.io/about/ title="about CRTH page">
+<a class="hover-white no-underline white-90" href=/about/ title="about CRTH page">
 about CRTH
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=ciudadrealtechhub.github.io/posts/ title="Posts page">
+<a class="hover-white no-underline white-90" href=/posts/ title="Posts page">
 Posts
 </a>
 </li>
@@ -64,7 +64,7 @@ Posts recientes
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=ciudadrealtechhub.github.io/posts/2018-07-05-rb-reunion/ class="color-inherit dim link">
+<a href=/posts/2018-07-05-rb-reunion/ class="color-inherit dim link">
 Charla: SQL vs. NoSQL en Rails
 </a>
 </h1>
@@ -73,7 +73,7 @@ Charla: SQL vs. NoSQL en Rails
 Marcos Martín (http://marcosmartingm.es/), Ingeniero de Software y uno de los habituales del grupo, nos propone una introducción a los sistemas de bases de datos relacionales tradicionales y no-relacionales o NoSQL, en el contexto de los modelos de abstracción que provee Rails.
 Según sus palabras: &ldquo;Hoy en día todos trabajamos con bases de datos relacionales pero cada vez hay más empuje por las no relacionales y no todos sabemos como funcionan.
 </div>
-<a href=ciudadrealtechhub.github.io/posts/2018-07-05-rb-reunion/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">Leer más</a>
+<a href=/posts/2018-07-05-rb-reunion/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">Leer más</a>
 </div>
 </div>
 </div>
@@ -85,7 +85,7 @@ Según sus palabras: &ldquo;Hoy en día todos trabajamos con bases de datos rela
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=ciudadrealtechhub.github.io/posts/2018-04-12-rb-reunion/ class="color-inherit dim link">
+<a href=/posts/2018-04-12-rb-reunion/ class="color-inherit dim link">
 Seguimos vivos: Hablemos de Phoenix
 </a>
 </h1>
@@ -94,7 +94,7 @@ Seguimos vivos: Hablemos de Phoenix
 Rubén Sierra (https://twitter.com/maguilag), Ingeniero de Software en Bizneo HR Solutions (https://twitter.com/BizneoHR), nos propone dar un pasito más en la serie de charlas sobre el ecosistema Elixir/OTP presentándonos algunas características de Phoenix framework (http://phoenixframework.org/).
 Según sus propias palabras, se tratará de &ldquo;una introducción al framework web de Elixir, Phoenix, donde veremos un poco de historia, sus puntos fuertes frente a otros frameworks y su mayor virtud, los channels, preparando una pequeña aplicación para probar su potencial.
 </div>
-<a href=ciudadrealtechhub.github.io/posts/2018-04-12-rb-reunion/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">Leer más</a>
+<a href=/posts/2018-04-12-rb-reunion/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">Leer más</a>
 </div>
 </div>
 </div>
@@ -104,32 +104,32 @@ Según sus propias palabras, se tratará de &ldquo;una introducción al framewor
 <section class=w-100>
 <h1 class=f3>Más</h1>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=ciudadrealtechhub.github.io/posts/2017-11-08-rb-reunion/ class="link black dim">
+<a href=/posts/2017-11-08-rb-reunion/ class="link black dim">
 Procesadores de Lenguajes - Conociendo un poco más de Ruby
 </a>
 </h2>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=ciudadrealtechhub.github.io/posts/2017-07-05-rb-reunion/ class="link black dim">
+<a href=/posts/2017-07-05-rb-reunion/ class="link black dim">
 Kata contra el calor
 </a>
 </h2>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=ciudadrealtechhub.github.io/posts/2017-04-19-rb-reunion/ class="link black dim">
+<a href=/posts/2017-04-19-rb-reunion/ class="link black dim">
 Charla(s) de Abril
 </a>
 </h2>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=ciudadrealtechhub.github.io/posts/2017-02-22-rb-reunion/ class="link black dim">
+<a href=/posts/2017-02-22-rb-reunion/ class="link black dim">
 Atención Rubyistas charla de Febrero: ¡podéis crear vuestro propio videojuego!
 </a>
 </h2>
-<a href=ciudadrealtechhub.github.io/posts/ class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">Todos los Posts</a>
+<a href=/posts/ class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">Todos los Posts</a>
 </section>
 </div>
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
-<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=ciudadrealtechhub.github.io>
+<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href>
 &copy; Ciudad Real Tech Hub 2021
 </a>
 <div>
