--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
 <meta name=description content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia.">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=/ciudadrealtechhub.github.io/ananke/css/main.min.css>
+<link rel=stylesheet href=/ananke/css/main.min.css>
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="ciudadrealtechhub.github.io/404.html">
+<meta property="og:url" content="/404.html">
 <meta itemprop=name content="404 Page not found">
 <meta itemprop=description content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia."><meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
@@ -22,18 +22,18 @@
 <div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
-<a href=ciudadrealtechhub.github.io/ class="f3 fw2 hover-white no-underline white-90 dib">
+<a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
 Ciudad Real Tech Hub
 </a>
 <div class="flex-l items-center">
 <ul class="pl0 mr3">
 <li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=ciudadrealtechhub.github.io/about/ title="about CRTH page">
+<a class="hover-white no-underline white-90" href=/about/ title="about CRTH page">
 about CRTH
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=ciudadrealtechhub.github.io/posts/ title="Posts page">
+<a class="hover-white no-underline white-90" href=/posts/ title="Posts page">
 Posts
 </a>
 </li>
@@ -52,7 +52,7 @@ This is not the page you were looking for
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
-<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=ciudadrealtechhub.github.io>
+<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href>
 &copy; Ciudad Real Tech Hub 2021
 </a>
 <div>
