deploy: 42fbf990bd1e2ca4ce1b27d77655359bc2870a04

--- a/about/index.html
+++ b/about/index.html
@@ -46,8 +46,8 @@ About CRTH
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/meetings-agilecr/ title="Meetings Agile-CR page">
-Meetings Agile-CR
+<a class="hover-white no-underline white-90" href=/grupos/ title="Grupos page">
+Grupos
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
