--- a/grupos/agilecr/index.html
+++ b/grupos/agilecr/index.html
@@ -2,22 +2,22 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>Ciudad Real Tech Hub</title>
+<title>AgileCR | Ciudad Real Tech Hub</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia.">
+<meta name=description content="Posts del grupo Agile Ciudad Real">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.css>
-<link href=/index.xml rel=alternate type=application/rss+xml title="Ciudad Real Tech Hub">
-<link href=/index.xml rel=feed type=application/rss+xml title="Ciudad Real Tech Hub">
-<meta property="og:title" content="Ciudad Real Tech Hub">
-<meta property="og:description" content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia.">
+<link href=/grupos/agilecr/index.xml rel=alternate type=application/rss+xml title="Ciudad Real Tech Hub">
+<link href=/grupos/agilecr/index.xml rel=feed type=application/rss+xml title="Ciudad Real Tech Hub">
+<meta property="og:title" content="AgileCR">
+<meta property="og:description" content="Posts del grupo Agile Ciudad Real">
 <meta property="og:type" content="website">
-<meta property="og:url" content="/">
-<meta itemprop=name content="Ciudad Real Tech Hub">
-<meta itemprop=description content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia."><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Ciudad Real Tech Hub">
-<meta name=twitter:description content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia.">
+<meta property="og:url" content="/grupos/agilecr/">
+<meta itemprop=name content="AgileCR">
+<meta itemprop=description content="Posts del grupo Agile Ciudad Real"><meta name=twitter:card content="summary">
+<meta name=twitter:title content="AgileCR">
+<meta name=twitter:description content="Posts del grupo Agile Ciudad Real">
 </head>
 <body class="ma0 avenir bg-near-white">
 <header class="cover bg-top" style=background-image:url(images/tech-bg.jpg)>
@@ -53,87 +53,34 @@ Posts
 </nav>
 <div class="tc-l pv4 pv6-l ph3 ph4-ns">
 <h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
-Ciudad Real Tech Hub
+AgileCR
 </h1>
+<h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">
+Posts del grupo Agile Ciudad Real
+</h2>
 </div>
 </div>
 </header>
 <main class=pb7 role=main>
-<article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
-</article>
-<div class="pa3 pa4-ns w-100 w-70-ns center">
-<h1 class=flex-none>
-Grupos recientes
-</h1>
-<section class="w-100 mw8">
-<div class="relative w-100 mb4">
-<article class="bb b--black-10">
-<div class="db pv4 ph3 ph0-l no-underline dark-gray">
-<div class="flex flex-column flex-row-ns">
-<div class="blah w-100">
-<h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/grupos/rubycr/2018-07-05-rb-reunion/ class="color-inherit dim link">
-Charla: SQL vs. NoSQL en Rails
+<article class="pa3 pa4-ns nested-copy-line-height nested-img">
+<section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"></section>
+<section class="flex-ns flex-wrap justify-around mt5">
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Grupos</span>
+<h1 class="f3 near-black">
+<a href=/grupos/agilecr/reuniones/ class="link black dim">
+Meetings Agile-CR
 </a>
 </h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-🗣 Charla: SQL vs. NoSQL en Rails
-Marcos Martín (http://marcosmartingm.es/), Ingeniero de Software y uno de los habituales del grupo, nos propone una introducción a los sistemas de bases de datos relacionales tradicionales y no-relacionales o NoSQL, en el contexto de los modelos de abstracción que provee Rails.
-Según sus palabras: &ldquo;Hoy en día todos trabajamos con bases de datos relacionales pero cada vez hay más empuje por las no relacionales y no todos sabemos como funcionan.
-</div>
-<a href=/grupos/rubycr/2018-07-05-rb-reunion/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">Leer más</a>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Próximas reuniones Las próximas propuestas se harán como parte del CRTH.
+En reuniones anteriores 2015/05/13: Taller de scrapping y web-bots (Bizneo) 2015/04/27: Visión por computador y realidad aumentada 2013/03/26: Cañas ágiles 2013/06/26: Charlas &ldquo;Emacs pills&rdquo;, por David Villa &ldquo;BuildBot&rdquo;, por Miguel Ángel García 2013/09/18: Cañas ágiles y toma de contacto para el nuevo curso. 2013/10/16: Charlas &ldquo;Drones&rdquo;, por Daniel Hurtado &ldquo;Git avanzado&rdquo;, que hicimos entre todos 2013/11/13: Kata &ldquo;String calculator&rdquo; 2014/01/15: Reunión mensual 2014/02/26: Charlas: &ldquo;Mongodb en ruby&rdquo;, por David Z.
 </div>
 </div>
 </div>
-</article>
 </div>
-<div class="relative w-100 mb4">
-<article class="bb b--black-10">
-<div class="db pv4 ph3 ph0-l no-underline dark-gray">
-<div class="flex flex-column flex-row-ns">
-<div class="blah w-100">
-<h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/grupos/rubycr/2018-04-12-rb-reunion/ class="color-inherit dim link">
-Seguimos vivos: Hablemos de Phoenix
-</a>
-</h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-🗣 Charla: &ldquo;Cloud |> Summon |> Phoenix&rdquo;
-Rubén Sierra (https://twitter.com/maguilag), Ingeniero de Software en Bizneo HR Solutions (https://twitter.com/BizneoHR), nos propone dar un pasito más en la serie de charlas sobre el ecosistema Elixir/OTP presentándonos algunas características de Phoenix framework (http://phoenixframework.org/).
-Según sus propias palabras, se tratará de &ldquo;una introducción al framework web de Elixir, Phoenix, donde veremos un poco de historia, sus puntos fuertes frente a otros frameworks y su mayor virtud, los channels, preparando una pequeña aplicación para probar su potencial.
-</div>
-<a href=/grupos/rubycr/2018-04-12-rb-reunion/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">Leer más</a>
-</div>
-</div>
-</div>
-</article>
-</div>
-</section>
-<section class=w-100>
-<h1 class=f3>Más</h1>
-<h2 class="f5 fw4 mb4 dib mr3">
-<a href=/grupos/rubycr/2017-11-08-rb-reunion/ class="link black dim">
-Procesadores de Lenguajes - Conociendo un poco más de Ruby
-</a>
-</h2>
-<h2 class="f5 fw4 mb4 dib mr3">
-<a href=/grupos/rubycr/2017-07-05-rb-reunion/ class="link black dim">
-Kata contra el calor
-</a>
-</h2>
-<h2 class="f5 fw4 mb4 dib mr3">
-<a href=/grupos/rubycr/2017-04-19-rb-reunion/ class="link black dim">
-Charla(s) de Abril
-</a>
-</h2>
-<h2 class="f5 fw4 mb4 dib mr3">
-<a href=/grupos/rubycr/2017-02-22-rb-reunion/ class="link black dim">
-Atención Rubyistas charla de Febrero: ¡podéis crear vuestro propio videojuego!
-</a>
-</h2>
-<a href=/grupos/ class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">Todos los Grupos</a>
-</section>
-</div>
+</section></article>
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
