--- a/grupos/rubycr/index.html
+++ b/grupos/rubycr/index.html
@@ -2,22 +2,22 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>CiudadReal.RB | Ciudad Real Tech Hub</title>
+<title>Ciudad Real RB | Ciudad Real Tech Hub</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia.">
+<meta name=description content="Lista del grupo Ciudad Real Ruby">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.css>
-<link href=/categories/ciudadreal.rb/index.xml rel=alternate type=application/rss+xml title="Ciudad Real Tech Hub">
-<link href=/categories/ciudadreal.rb/index.xml rel=feed type=application/rss+xml title="Ciudad Real Tech Hub">
-<meta property="og:title" content="CiudadReal.RB">
-<meta property="og:description" content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia.">
+<link href=/grupos/rubycr/index.xml rel=alternate type=application/rss+xml title="Ciudad Real Tech Hub">
+<link href=/grupos/rubycr/index.xml rel=feed type=application/rss+xml title="Ciudad Real Tech Hub">
+<meta property="og:title" content="Ciudad Real RB">
+<meta property="og:description" content="Lista del grupo Ciudad Real Ruby">
 <meta property="og:type" content="website">
-<meta property="og:url" content="/categories/ciudadreal.rb/">
-<meta itemprop=name content="CiudadReal.RB">
-<meta itemprop=description content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia."><meta name=twitter:card content="summary">
-<meta name=twitter:title content="CiudadReal.RB">
-<meta name=twitter:description content="Ciudad Real Technology Hub, la agrupación de asociaciones tecnológicas de la provincia.">
+<meta property="og:url" content="/grupos/rubycr/">
+<meta itemprop=name content="Ciudad Real RB">
+<meta itemprop=description content="Lista del grupo Ciudad Real Ruby"><meta name=twitter:card content="summary">
+<meta name=twitter:title content="Ciudad Real RB">
+<meta name=twitter:description content="Lista del grupo Ciudad Real Ruby">
 </head>
 <body class="ma0 avenir bg-near-white">
 <header class="cover bg-top" style=background-image:url(images/tech-bg.jpg)>
@@ -53,21 +53,19 @@ Posts
 </nav>
 <div class="tc-l pv4 pv6-l ph3 ph4-ns">
 <h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
-CiudadReal.RB
+Ciudad Real RB
 </h1>
+<h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">
+Lista del grupo Ciudad Real Ruby
+</h2>
 </div>
 </div>
 </header>
 <main class=pb7 role=main>
-<article class="cf pa3 pa4-m pa4-l">
-<div class="measure-wide-l center f4 lh-copy nested-copy-line-height nested-links nested-img mid-gray">
-<p>A continuación encontrará las páginas asociadas a “CiudadReal.RB”</p>
-</div>
-</article>
-<div class="mw8 center">
+<article class="pa3 pa4-ns nested-copy-line-height nested-img">
+<section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"></section>
 <section class="flex-ns flex-wrap justify-around mt5">
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Grupos</span>
 <h1 class="f3 near-black">
@@ -83,8 +81,7 @@ Según sus palabras: &ldquo;Hoy en día todos trabajamos con bases de datos rela
 </div>
 </div>
 </div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Grupos</span>
 <h1 class="f3 near-black">
@@ -100,8 +97,7 @@ Según sus propias palabras, se tratará de &ldquo;una introducción al framewor
 </div>
 </div>
 </div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Grupos</span>
 <h1 class="f3 near-black">
@@ -121,8 +117,7 @@ Charla: “Creando un procesador de lenguajes” Tenemos el placer de contar en 
 </div>
 </div>
 </div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Grupos</span>
 <h1 class="f3 near-black">
@@ -141,8 +136,7 @@ Dicha actividad consistirá en un ejercicio de pair programming cuya finalidad s
 </div>
 </div>
 </div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Grupos</span>
 <h1 class="f3 near-black">
@@ -161,8 +155,7 @@ Despégame, espacio de coworking Plaza Cervantes 6, Planta 5 (https://goo.
 </div>
 </div>
 </div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Grupos</span>
 <h1 class="f3 near-black">
@@ -182,8 +175,7 @@ Charla: “Rubyistas: ¡podéis crear vuestro propio videojuego!
 </div>
 </div>
 </div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Grupos</span>
 <h1 class="f3 near-black">
@@ -201,8 +193,7 @@ Lugar
 </div>
 </div>
 </div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Grupos</span>
 <h1 class="f3 near-black">
@@ -222,8 +213,7 @@ Nuestro viejo amigo Diego Arenal nos introducirá en el mundo de Elixir (http://
 </div>
 </div>
 </div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Grupos</span>
 <h1 class="f3 near-black">
@@ -243,8 +233,7 @@ El señor Sergio Sánchez (https://twitter.com/soyunrandom) nos hablará de su e
 </div>
 </div>
 </div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Grupos</span>
 <h1 class="f3 near-black">
@@ -266,28 +255,27 @@ David Anguita Sergio Sanchez David Martin Garcia Sergio Rojas Daniel Romero Sant
 </div>
 </div>
 </div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Grupos</span>
-<h1 class="f3 near-black">
-<a href=/grupos/rubycr/2016-03-10-rb-reunion/ class="link black dim">
-Reunión y charla de Marzo
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Finalmente tenemos ponente y tema para la próxima reunión, os dejamos con todos los detalles:
-Charla: “Elasticsearch for Dummies”
-David Martín (https://twitter.com/basestylo) nos hablará sobre las principales características de este servicio, analizando sus ventajas e inconvenientes y tomando como ejemplo un pequeño caso inicial donde jugaremos con este pequeño monstruo.
-Lugar Despégame, espacio de coworking Plaza Cervantes 6, Planta 5 · Ciudad Real
-Asistentes 9, entre ellos:
-David Anguita Sergio Sanchez David Martin Garcia itsquall Sergio Rojas Santiago Marcos Martin David V.
-</div>
-</div>
-</div>
-</div>
 </section>
-</div>
+<ul class="pagination pagination-default">
+<li class="page-item disabled">
+<a href=# aria-disabled=true aria-label=First class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;&#171;</span></a>
+</li>
+<li class="page-item disabled">
+<a href=# aria-disabled=true aria-label=Previous class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;</span></a>
+</li>
+<li class="page-item active">
+<a href=# aria-current=page aria-label="Page 1" class=page-link role=button>1</a>
+</li>
+<li class=page-item>
+<a href=/grupos/rubycr/page/2/ aria-label="Page 2" class=page-link role=button>2</a>
+</li>
+<li class=page-item>
+<a href=/grupos/rubycr/page/2/ aria-label=Next class=page-link role=button><span aria-hidden=true>&#187;</span></a>
+</li>
+<li class=page-item>
+<a href=/grupos/rubycr/page/2/ aria-label=Last class=page-link role=button><span aria-hidden=true>&#187;&#187;</span></a>
+</li>
+</ul></article>
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
