deploy: 43d9970bfead6a838a6626e60d4ff14ee3bfdbd7

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@ Posts
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/tags/ title="Tags page">
+Tags
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
 <a class="hover-white no-underline white-90" href=/grupos/ title="Grupos page">
 Grupos
 </a>
@@ -104,6 +109,30 @@ Simple Echo Server en Bash while true ; do echo -e "HTTP/1.1 200 OK\n\n $(date)"
 </div>
 </article>
 </div>
+</section>
+<section class=w-100>
+<h1 class=f3>Más</h1>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=/posts/vim-replace-text/ class="link black dim">
+Vim: Fastidiando a los desarrolladores
+</a>
+</h2>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=/posts/vim-registers/ class="link black dim">
+vim: registros
+</a>
+</h2>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=/posts/vim-a-good-vimrc/ class="link black dim">
+A good vimrc
+</a>
+</h2>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=/posts/vim-inner-and-around/ class="link black dim">
+Vim: Cit, dit, yit, Cat, dat, yat
+</a>
+</h2>
+<a href=/posts/ class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">Todos los Posts</a>
 </section>
 </div>
 </main>
