--- a/grupos/agilecr/index.html
+++ b/grupos/agilecr/index.html
@@ -1,103 +1,2 @@
-<!doctype html><html lang=es-es>
-<head>
-<meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>AgileCR | Ciudad Real Tech Hub</title>
-<meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="Posts del grupo Agile Ciudad Real">
-<meta name=generator content="Hugo 0.88.1">
-<meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=/ananke/css/main.min.css>
-<link href=/grupos/agilecr/index.xml rel=alternate type=application/rss+xml title="Ciudad Real Tech Hub">
-<link href=/grupos/agilecr/index.xml rel=feed type=application/rss+xml title="Ciudad Real Tech Hub">
-<meta property="og:title" content="AgileCR">
-<meta property="og:description" content="Posts del grupo Agile Ciudad Real">
-<meta property="og:type" content="website">
-<meta property="og:url" content="/grupos/agilecr/">
-<meta itemprop=name content="AgileCR">
-<meta itemprop=description content="Posts del grupo Agile Ciudad Real"><meta name=twitter:card content="summary">
-<meta name=twitter:title content="AgileCR">
-<meta name=twitter:description content="Posts del grupo Agile Ciudad Real">
-</head>
-<body class="ma0 avenir bg-near-white">
-<header class="cover bg-top" style=background-image:url(images/tech-bg.jpg)>
-<div class=bg-black-60>
-<nav class="pv3 ph3 ph4-ns" role=navigation>
-<div class="flex-l justify-between items-center center">
-<a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
-<img src=/images/crth-100.png class="w100 mw5-ns" alt="Ciudad Real Tech Hub">
-</a>
-<div class="flex-l items-center">
-<ul class="pl0 mr3">
-<li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/posts/ title="Posts page">
-Posts
-</a>
-</li>
-<li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/tags/ title="Tags page">
-Tags
-</a>
-</li>
-<li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/grupos/ title="Grupos page">
-Grupos
-</a>
-</li>
-<li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/about/ title="About CRTH page">
-About CRTH
-</a>
-</li>
-</ul>
-<a href=https://ciudadrealtechhub.herokuapp.com/ target=_blank class="link-transition slack link dib z-999 pt3 pt0-l mr1" title="Slack link" rel=noopener aria-label="follow on Slack——Opens in a new window"><svg height="32" style="enable-background:new 65 65 150 135" viewBox="65 65 150 135" width="32" xmlns="http://www.w3.org/2000/svg"><style>.st0{fill:#bababa}</style><g><g><path class="st0" d="M99.4 151.2c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9 5.8-12.9 12.9-12.9h12.9v12.9z"/><path class="st0" d="M105.9 151.2c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9v32.3c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9V151.2z"/></g><g><path class="st0" d="M118.8 99.4c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9 12.9 5.8 12.9 12.9v12.9H118.8z"/><path class="st0" d="M118.8 105.9c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9H86.5c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9h32.3z"/></g><g><path class="st0" d="M170.6 118.8c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9-5.8 12.9-12.9 12.9h-12.9V118.8z"/><path class="st0" d="M164.1 118.8c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9V86.5c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9v32.3z"/></g><g><path class="st0" d="M151.2 170.6c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9-12.9-5.8-12.9-12.9v-12.9h12.9z"/><path class="st0" d="M151.2 164.1c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9h32.3c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9H151.2z"/></g></g></svg>
-<span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" width="8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd;fill:"/></svg>
-</span></a>
-</div>
-</div>
-</nav>
-<div class="tc-l pv4 pv6-l ph3 ph4-ns">
-<h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
-AgileCR
-</h1>
-<h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">
-Posts del grupo Agile Ciudad Real
-</h2>
-</div>
-</div>
-</header>
-<main class=pb7 role=main>
-<article class="pa3 pa4-ns nested-copy-line-height nested-img">
-<section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"></section>
-<section class="flex-ns flex-wrap justify-around mt5">
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Grupos</span>
-<h1 class="f3 near-black">
-<a href=/grupos/agilecr/reuniones/ class="link black dim">
-Meetings Agile-CR
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Próximas reuniones Las próximas propuestas se harán como parte del CRTH.
-En reuniones anteriores 2015/05/13: Taller de scrapping y web-bots (Bizneo) 2015/04/27: Visión por computador y realidad aumentada 2013/03/26: Cañas ágiles 2013/06/26: Charlas &ldquo;Emacs pills&rdquo;, por David Villa &ldquo;BuildBot&rdquo;, por Miguel Ángel García 2013/09/18: Cañas ágiles y toma de contacto para el nuevo curso. 2013/10/16: Charlas &ldquo;Drones&rdquo;, por Daniel Hurtado &ldquo;Git avanzado&rdquo;, que hicimos entre todos 2013/11/13: Kata &ldquo;String calculator&rdquo; 2014/01/15: Reunión mensual 2014/02/26: Charlas: &ldquo;Mongodb en ruby&rdquo;, por David Z.
-</div>
-</div>
-</div>
-</div>
-</section></article>
-</main>
-<footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
-<div class="flex justify-between">
-<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href>
-&copy; Ciudad Real Tech Hub 2021
-</a>
-<div>
-<a href=https://ciudadrealtechhub.herokuapp.com/ target=_blank class="link-transition slack link dib z-999 pt3 pt0-l mr1" title="Slack link" rel=noopener aria-label="follow on Slack——Opens in a new window"><svg height="32" style="enable-background:new 65 65 150 135" viewBox="65 65 150 135" width="32" xmlns="http://www.w3.org/2000/svg"><style>.st0{fill:#bababa}</style><g><g><path class="st0" d="M99.4 151.2c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9 5.8-12.9 12.9-12.9h12.9v12.9z"/><path class="st0" d="M105.9 151.2c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9v32.3c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9V151.2z"/></g><g><path class="st0" d="M118.8 99.4c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9 12.9 5.8 12.9 12.9v12.9H118.8z"/><path class="st0" d="M118.8 105.9c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9H86.5c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9h32.3z"/></g><g><path class="st0" d="M170.6 118.8c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9-5.8 12.9-12.9 12.9h-12.9V118.8z"/><path class="st0" d="M164.1 118.8c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9V86.5c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9v32.3z"/></g><g><path class="st0" d="M151.2 170.6c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9-12.9-5.8-12.9-12.9v-12.9h12.9z"/><path class="st0" d="M151.2 164.1c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9h32.3c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9H151.2z"/></g></g></svg>
-<span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" width="8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd;fill:"/></svg>
-</span></a>
-</div>
-</div>
-</footer>
-</body>
-</html>
+<!doctype html><html lang=es-es><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge,chrome=1"><title>AgileCR | Ciudad Real Tech Hub</title><meta name=viewport content="width=device-width,minimum-scale=1"><meta name=description content="Posts del grupo Agile Ciudad Real"><meta name=generator content="Hugo 0.101.0"><meta name=ROBOTS content="NOINDEX, NOFOLLOW"><link rel=stylesheet href=/ananke/css/main.min.css><link href=/grupos/agilecr/index.xml rel=alternate type=application/rss+xml title="Ciudad Real Tech Hub"><link href=/grupos/agilecr/index.xml rel=feed type=application/rss+xml title="Ciudad Real Tech Hub"><meta property="og:title" content="AgileCR"><meta property="og:description" content="Posts del grupo Agile Ciudad Real"><meta property="og:type" content="website"><meta property="og:url" content="/grupos/agilecr/"><meta itemprop=name content="AgileCR"><meta itemprop=description content="Posts del grupo Agile Ciudad Real"><meta name=twitter:card content="summary"><meta name=twitter:title content="AgileCR"><meta name=twitter:description content="Posts del grupo Agile Ciudad Real"></head><body class="ma0 avenir bg-near-white"><header class="cover bg-top" style=background-image:url(images/tech-bg.jpg)><div class=bg-black-60><nav class="pv3 ph3 ph4-ns" role=navigation><div class="flex-l justify-between items-center center"><a href=/ class="f3 fw2 hover-white no-underline white-90 dib"><img src=/images/crth-100.png class="w100 mw5-ns" alt="Ciudad Real Tech Hub"></a><div class="flex-l items-center"><ul class="pl0 mr3"><li class="list f5 f4-ns fw4 dib pr3"><a class="hover-white no-underline white-90" href=/posts/ title="Posts page">Posts</a></li><li class="list f5 f4-ns fw4 dib pr3"><a class="hover-white no-underline white-90" href=/tags/ title="Tags page">Tags</a></li><li class="list f5 f4-ns fw4 dib pr3"><a class="hover-white no-underline white-90" href=/grupos/ title="Grupos page">Grupos</a></li><li class="list f5 f4-ns fw4 dib pr3"><a class="hover-white no-underline white-90" href=/about/ title="About CRTH page">About CRTH</a></li></ul><a href=https://ciudadrealtechhub.herokuapp.com/ target=_blank class="link-transition slack link dib z-999 pt3 pt0-l mr1" title="Slack link" rel=noopener aria-label="follow on Slack——Opens in a new window"><svg height="32" style="enable-background:new 65 65 150 135" viewBox="65 65 150 135" width="32" xmlns="http://www.w3.org/2000/svg"><style>.st0{fill:#bababa}</style><g><g><path class="st0" d="M99.4 151.2c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9 5.8-12.9 12.9-12.9h12.9v12.9z"/><path class="st0" d="M105.9 151.2c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9v32.3c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9V151.2z"/></g><g><path class="st0" d="M118.8 99.4c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9 12.9 5.8 12.9 12.9v12.9H118.8z"/><path class="st0" d="M118.8 105.9c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9H86.5c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9h32.3z"/></g><g><path class="st0" d="M170.6 118.8c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9-5.8 12.9-12.9 12.9h-12.9V118.8z"/><path class="st0" d="M164.1 118.8c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9V86.5c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9v32.3z"/></g><g><path class="st0" d="M151.2 170.6c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9-12.9-5.8-12.9-12.9v-12.9h12.9z"/><path class="st0" d="M151.2 164.1c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9h32.3c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9H151.2z"/></g></g></svg><span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" width="8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd;fill:"/></svg></span></a></div></div></nav><div class="tc-l pv4 pv6-l ph3 ph4-ns"><h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">AgileCR</h1><h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">Posts del grupo Agile Ciudad Real</h2></div></div></header><main class=pb7 role=main><article class="pa3 pa4-ns nested-copy-line-height nested-img"><section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"></section><section class="flex-ns flex-wrap justify-around mt5"><div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height"><div class="bg-white mb3 pa4 gray overflow-hidden"><span class="f6 db">Grupos</span><h1 class="f3 near-black"><a href=/grupos/agilecr/reuniones/ class="link black dim">Meetings Agile-CR</a></h1><div class="nested-links f5 lh-copy nested-copy-line-height">Próximas reuniones Las próximas propuestas se harán como parte del CRTH.
+En reuniones anteriores 2015/05/13: Taller de scrapping y web-bots (Bizneo) 2015/04/27: Visión por computador y realidad aumentada 2013/03/26: Cañas ágiles 2013/06/26: Charlas &ldquo;Emacs pills&rdquo;, por David Villa &ldquo;BuildBot&rdquo;, por Miguel Ángel García 2013/09/18: Cañas ágiles y toma de contacto para el nuevo curso. 2013/10/16: Charlas &ldquo;Drones&rdquo;, por Daniel Hurtado &ldquo;Git avanzado&rdquo;, que hicimos entre todos 2013/11/13: Kata &ldquo;String calculator&rdquo; 2014/01/15: Reunión mensual 2014/02/26: Charlas: &ldquo;Mongodb en ruby&rdquo;, por David Z.</div></div></div></div></section></article></main><footer class="bg-black bottom-0 w-100 pa3" role=contentinfo><div class="flex justify-between"><a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href>&copy; Ciudad Real Tech Hub 2022</a><div><a href=https://ciudadrealtechhub.herokuapp.com/ target=_blank class="link-transition slack link dib z-999 pt3 pt0-l mr1" title="Slack link" rel=noopener aria-label="follow on Slack——Opens in a new window"><svg height="32" style="enable-background:new 65 65 150 135" viewBox="65 65 150 135" width="32" xmlns="http://www.w3.org/2000/svg"><style>.st0{fill:#bababa}</style><g><g><path class="st0" d="M99.4 151.2c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9 5.8-12.9 12.9-12.9h12.9v12.9z"/><path class="st0" d="M105.9 151.2c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9v32.3c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9V151.2z"/></g><g><path class="st0" d="M118.8 99.4c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9 12.9 5.8 12.9 12.9v12.9H118.8z"/><path class="st0" d="M118.8 105.9c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9H86.5c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9h32.3z"/></g><g><path class="st0" d="M170.6 118.8c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9-5.8 12.9-12.9 12.9h-12.9V118.8z"/><path class="st0" d="M164.1 118.8c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9V86.5c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9v32.3z"/></g><g><path class="st0" d="M151.2 170.6c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9-12.9-5.8-12.9-12.9v-12.9h12.9z"/><path class="st0" d="M151.2 164.1c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9h32.3c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9H151.2z"/></g></g></svg><span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" width="8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd;fill:"/></svg></span></a></div></div></footer></body></html>
